--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - "3.4"
   - "3.5"
 # command to install dependencies
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y mongodb
+
 install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests tests
