--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ python:
   - "3.4"
   - "3.5"
 # command to install dependencies
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y mongodb
+services:
+  - "mongodb"
 
 install: "pip install -r requirements.txt"
 # command to run tests
