--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ nose==1.3.7
 pymongo==3.2
 wheel==0.26.0
 xmltodict==0.9.2
+pyyaml
+-e git+git@github.com:dreadpirate15/configure.git@0.6#egg=configure
