--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-nose==1.3.7
-pymongo==3.2
-wheel==0.26.0
-xmltodict==0.9.2
-pyyaml
--e git://github.com/dreadpirate15/configure.git@0.6#egg=configure
+pymongo
+xmltodict
+figgypudding
