--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,9 @@
 ---
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 tasks:
-  - init: pip install -r requirements.txt
+  - init: |
+      pip install -r requirements.txt
+      pip install -r requirements-dev.txt
 
 vscode:
   extensions:
