--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,7 @@ charset = utf-8
 [*.py]
 indent_style = space
 indent_size = 4
+max_line_length = 100
 
 # Tab indentation (no size specified)
 [Makefile]
