--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ tasks:
   - init: |
       pip install -r requirements.txt
       pip install -r requirements-dev.txt
+      pre-commit install
 
 vscode:
   extensions:
