--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "coppermind"
+version = "0.0.1"
+dependencies = []
+
+[tool.setuptools.packages.find]
+where = ["coppermind"]
+exclude = ["tests*"]
+
+
 [tool.ruff]
 line-length = 100
 ignore = [
